--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Quicksand:300,500" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
-  <title>React App</title>
+  <title>My Porfolio</title>
 </head>
 
 <body>
